Fixed bug #67741 (auto_prepend_file messes up __LINE__)

This also fixes bug #54081